Fix dark mode issue

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
+html {
+    color-scheme: light !important;
+}
+
 *{
     margin: 0;
     padding: 0;
+     forced-color-adjust: none !important;
 }
 body{
     background-color:beige;
